--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
+    signingConfigs {
+        release {
+//            keyAlias '###'
+//            keyPassword '******'
+//            storeFile file('../###.jks')
+//            storePassword '******'
+        }
+        debug {
+//            keyAlias 'androiddebugkey'
+//            keyPassword '123456'
+//            storeFile file('/home/tanjinc/.android/debug.keystore')
+//            storePassword '123456'
+        }
+    }
+    buildTypes {
+//        debug {
+//            signingConfig signingConfigs.release
+//        }
+//        release {
+//            signingConfig signingConfigs.release
+//        }
     }
 }
 
@@ -31,7 +51,7 @@ kotlin {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0-rc02'
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
     implementation 'com.android.support:design:27.1.0'
@@ -43,8 +63,8 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0"
     implementation 'com.tencent:mmkv:1.0.10'
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
